# scalatrix

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pgtest  pgtest.cpp  pyproject.toml  setup_cmake.sh  test  test.cpp  test.html
examples/: node_example.cpp
examples/native/: CMakeLists.txt  native_example  native_example.cpp
examples/python/: example.py  example2.py  example3.py
examples/sx-node/scalatrix/: README.md  index.d.ts  package-lock.json  package.json  scalatrix-1.0.0.tgz
examples/sx-node/scalatrix/lib/: scalatrix.d.ts
examples/wasm/: CMakeLists.txt  makerun.sh  wasm_example.html
include/: scalatrix.hpp
include/scalatrix/: affine_transform.hpp  label_calculator.hpp  lattice.hpp  linear_solver.hpp  mos.hpp  node.hpp  params.hpp  pitchset.hpp  projection_strip.hpp  scale.hpp
src/: affine_transform.cpp  label_calculator.cpp  lattice.cpp  linear_solver.cpp  main.cpp  mos.cpp  node.cpp  params.cpp  pitchset.cpp  python_bindings.cpp  scale.cpp
tests/: CMakeLists.txt  README.md  test_affine_transform.cpp  test_affine_transform_simple  test_affine_transform_simple.cpp  test_integration.cpp  test_label_calculator.cpp  test_mos.cpp  test_node.cpp  test_pitch_sets.cpp  test_scale.cpp
