[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "scalatrix"
version = "1.0.0"
description = "Scalatrix music theory library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = []
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"